2002-04-25  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 539701 ]: early initialization error -> crash
	* spvw.d (main): init_other_modules_2() after the stream
	variables are already initialized

2002-04-25  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 548368 ]: inspector help barfs (nested inspectors)
	* inspect.lisp (*inspect-all*): bind in INSPECT instead of using
	a global variable since nested INSPECT sessions can interfere
	with each other, each modifying the same *INSPECT-ALL*
	(inspect-finalize): the default method now does nothing

2002-04-24  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 548362 ]: inspector deletes wrong package on exit
	* inspect.lisp (inspect): keep the temp inspect package in a
	lexical variable in addition to *PACKAGE*

2002-04-24  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_object_tab) [UNIX_CYGWIN32]: add :CYGWIN to *FEATURES*

2002-04-24  Sam Steingold  <sds@gnu.org>

	upgraded to readline-4.2a
	* stream.d (lisp_completion_matches, lisp_completion_more):
	fixed the signature for the new readline
	(rd_ch_terminal3): wrap multi-line history handling inside
	begin_system_call()/end_system_call()
	(init_streamvars): do not use readline internals
	* noreadline.d: upgraded to the readline-4.2a API

2002-04-24  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch #[ 548089 ]: FOREIGN-FUNCTION+VARIABLE for everybody
	this allows CLISP FFI self-test (and dozens of hacks)
	* foreign.d (ffi_identity): new function
	(ffi_user_pointer): new variable
	(init_ffi): register them
	* foreign.lisp (ffi_identity, ffi_user_pointer) [commented]: define

2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch #[ 547541 ]: WITH-FOREIGN-OBJECT FFI stack allocation
	* foreign.d (EXEC-ON-STACK): new function
	* constsym.d, subr.d: ditto
	* foreign1.lisp (with-foreign-object): new public macro

2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>