@@ -1,3 +1,8 @@
+2002-04-26  Sam Steingold  <sds@gnu.org>
+
+	* lispbibl.d (PC386) [WIN32]: define, so that *FEATURES* will
+	contain :PC386 on the :WIN32 platform
+
 2002-04-25  Sam Steingold  <sds@gnu.org>
 
 	fixed bug #[ 539701 ]: early initialization error -> crash
